# auth_service

./: .env.test  Dockerfile  pyproject.toml
auth_service/: fastapi_app.py  main.py
auth_service/controller/schemas/: __init__.py  user.py
auth_service/repository/: user_repository.py
auth_service/repository/models/: user.py
auth_service/router/: user_router.py
auth_service/router/schemas/: __init__.py  user.py
auth_service/service/: user_service.py
auth_service/utils/: database.py
scripts/: format.sh
tests/: test_auth_service.py
