[tool.poetry]
name = "auth_service"
version = "0.1.0"
description = ""
authors = ["Maksym Hapon <maksym.hapon@proxet.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
passlib = "^1.7.4"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
